settings for github-pages

--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
-  "name": "shadow_protocoll",
+  "name": "echo-trace",
   "version": "0.1.0",
-  "private": true,
+  "homepage": "https://clemenspohl.github.io/echo-trace",
   "scripts": {
-    "dev": "next dev --turbopack",
-    "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "dev": "next dev",
+    "build": "next build && next export",
+    "deploy": "gh-pages -d out"
   },
   "dependencies": {
     "framer-motion": "^12.18.1",
@@ -22,6 +23,7 @@
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "15.3.3",
+    "gh-pages": "^6.3.0",
     "tailwindcss": "^4",
     "typescript": "^5"
   }
