--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "start": "next start",
     "lint": "next lint",
     "dev": "next dev",
-    "build": "next build && next export",
+    "build": "next build",
     "deploy": "gh-pages -d out"
   },
   "dependencies": {
